[package]
name = "nen"
version = "0.1.0"
authors = ["thomas-crane <thomasgcrane@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
semver = "0.9.0"
reqwest = "0.10.4"
tokio = { version = "0.2.13", features = ["rt-threaded", "macros"] }
scraper = "0.11.0"
regex = "1.3.5"
